Player class created to save player activity in game.
PlayerMenu and MainMenu now share it playerManager